# app

./: .dockerignore  Dockerfile  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  schemas.py
.github/workflows/: ci-cd.yml  ci.yml
templates/: index.html
tests/: test.py  test_simple.py
