[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.131.0",
    "sqlalchemy>=2.0.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# 🔥 НОВЫЙ синтаксис: группы зависимостей (вместо tool.uv.dev-dependencies)
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
]

# Настройки pytest
[tool.pytest.ini_options]
pythonpath = ["src"]  # 🔹 Ключевая строка!
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v"]